refactor(assistant): restructure AssistantChatService